tests/cases/ok/pkgfix/models.p4
class Task:
    points: int

    def __init__(self: Task, points: int) -> None:
        self.points = points
