tests/cases/fail/class_init_return_type.p4
class Counter:
    value: int

    def __init__(self: Counter, start: int) -> int:
        self.value = start
        return start
